<resources>
  <!-- App Portfolio Menu -->
  <string name="app_portfolio_menu_appbar_title">My App Portfolio</string>
  <string name="app_portfolio_list_title">My Nanodegree Apps!</string>
  <string name="button_title_spotify_streamer">Spotify Streamer</string>
  <string name="button_title_football_scores">Football Scores App</string>
  <string name="button_title_library_app">Library App</string>
  <string name="button_title_build_it_bigger">Build It Bigger</string>
  <string name="button_title_xyz_reader">XYZ Reader</string>
  <string name="button_title_capstone">Capstone: My Own App</string>
</resources>
